# adb-mcp

./: .gitignore  README.md  pyproject.toml
src/adb_mcp/: __init__.py  __main__.py  adb.py  discovery.py  server.py
src/adb_mcp/parsers/: ui_tree.py
src/adb_mcp/tools/: app.py  device.py  input.py  logs.py  screen.py  shell.py
tests/: test_adb.py  test_discovery.py  test_tools.py  test_ui_tree.py
