[project]
name = "adb-mcp"
version = "0.4.0"
description = "MCP server for Android device interaction via adb"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
adb-mcp = "adb_mcp:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adb_mcp"]
